--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
 	"name": "UrlGrey for Reddit",
 	"version": "1.0",
-	"omnibox": { "keyword" : "/r/" },
+	"omnibox": { "keyword" : "r" },
 	"icons": {
 	  "16": "icon.png"
 	},
