--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,13 @@
 		"scripts": ["background.js"]
 
 	},
-
+	{"manifest_version": 2,
+	
+	"name": "UrlGrey for YouTube",
+	"version": "1.0",
+	"omnibox": { "keyword" : "y" },
+	"icons" : {
+		"16": "youtube.png"
+	},
+	
 }
